--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- GoogleFonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins:wght@400;600;700&family=Roboto:wght@400;500;700;900&family=Sulphur+Point:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Poppins:wght@400;600;700&family=Roboto:wght@400;500;700;900&family=Sulphur+Point:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <title>NLW - ESports</title>
